--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
 
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+text-decoration: none;
+border: 0;
+list-style: none;
+appearance: none;
+}
+
+body{
+  font-family: "Poetsen One", sans-serif;
+  font-style: normal;
+  width: 100vw;
+  height: 100vh;
+  font-size: 0.88rem;
+  user-select: none;
+  overflow-x: hidden;
+  background: floralwhite;
+}
