--- a/style.css
+++ b/style.css
@@ -76,3 +76,71 @@ align-items: right;
 .danger{
 color: red;
 }
+/* aside */
+
+aside{
+height: 100vh;
+}
+aside .top{
+background-color: papayawhip;
+display: flex;
+justify-content: space-around;
+margin-top: 1.4rem;
+}
+aside .logo{
+display: flex;
+gap: 1rem;
+}
+aside .top div.close{
+display: none;
+}
+
+/* sidebar */
+
+aside .sidebar{
+background-color: papayawhip;
+display: flex;
+flex-direction: column;
+height: 85vh;
+position: relative;
+top: 1rem;
+}
+
+aside .h3{
+font-weight: 400;
+}
+
+aside .sidebar a{
+display: flex;
+color: peru;
+gap: 1rem;
+align-items: center;
+height: 3.2rem;
+transition:all .1s ease-in;
+}
+
+aside .sidebar a span{
+font-size: 1.6rem;
+transition:all .1s ease-in;
+}
+aside .sidebat a:last-child{
+position: absolute;
+bottom: 1rem;
+width: 100%;
+}
+aside .sidebar a:active{
+background: peachpuff;
+color: peru;
+margin-left: 0;
+border-left: 5px solid peru;
+}
+aside .sidebar a.active::before{
+content: '';
+margin-left: 0;
+width: 5px;
+height: 100%;
+background-color: peru;
+}
+aside .sidebar a:hover span{
+margin-left: 1rem;
+}
